[gd_scene load_steps=4 format=3 uid="uid://bdp5sbarxxkfq"]

[ext_resource type="Script" uid="uid://b2b5aaujjjim6" path="res://UI/HUD/hud.gd" id="1_yixhe"]

[sub_resource type="SystemFont" id="SystemFont_ijstf"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_4n7mi"]
font = SubResource("SystemFont_ijstf")
font_size = 24

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_yixhe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_right = 32.0
offset_bottom = 72.0
grow_horizontal = 2

[node name="LabelAP" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "AP: 3"
label_settings = SubResource("LabelSettings_4n7mi")

[node name="LabelMP" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MP: 3"
label_settings = SubResource("LabelSettings_4n7mi")

[node name="Finish" type="Button" parent="."]
offset_left = 981.0
offset_top = 596.0
offset_right = 1106.0
offset_bottom = 627.0
text = "Encerrar Turno
"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 928.0
offset_top = 551.0
offset_right = 1149.0
offset_bottom = 591.0

[node name="BtnUndo" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Desfazer"

[node name="BtnRedo" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Refazer
"

[node name="BtnRecover" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Recover"
